// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SerialPortSelector should render empty list while loading 1`] = `
<div
  className="core-padded-row core-serial-port-selector"
>
  <div
    className="dropdown"
    disabled={false}
    id="serial-port-selector"
    onKeyDown={[Function]}
    open={false}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      title="Select serial port (Alt+P)"
      type="button"
    >
      Select serial port
    </button>
  </div>
  <div
    className="core-serial-port-indicator off"
  />
</div>
`;

exports[`SerialPortSelector should render empty list while loading and port is selected 1`] = `
<div
  className="core-padded-row core-serial-port-selector"
>
  <div
    className="dropdown"
    disabled={false}
    id="serial-port-selector"
    onKeyDown={[Function]}
    open={false}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      title="/dev/tty0 (Alt+P)"
      type="button"
    >
      /dev/tty0
    </button>
  </div>
  <div
    className="core-serial-port-indicator off"
  />
</div>
`;

exports[`SerialPortSelector should render empty port list 1`] = `
<div
  className="core-padded-row core-serial-port-selector"
>
  <div
    className="dropdown"
    disabled={false}
    id="serial-port-selector"
    onKeyDown={[Function]}
    open={false}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      title="Select serial port (Alt+P)"
      type="button"
    >
      Select serial port
    </button>
  </div>
  <div
    className="core-serial-port-indicator off"
  />
</div>
`;

exports[`SerialPortSelector should render filtered ports 1`] = `
<div
  className="core-padded-row core-serial-port-selector"
>
  <div
    className="dropdown"
    disabled={false}
    id="serial-port-selector"
    onKeyDown={[Function]}
    open={false}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      title="Select serial port (Alt+P)"
      type="button"
    >
      Select serial port
    </button>
  </div>
  <div
    className="core-serial-port-indicator off"
  />
</div>
`;

exports[`SerialPortSelector should render only segger ports by default filter 1`] = `
<div
  className="core-padded-row core-serial-port-selector"
>
  <div
    className="dropdown"
    disabled={false}
    id="serial-port-selector"
    onKeyDown={[Function]}
    open={false}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      title="Select serial port (Alt+P)"
      type="button"
    >
      Select serial port
    </button>
  </div>
  <div
    className="core-serial-port-indicator off"
  />
</div>
`;

exports[`SerialPortSelector should render two ports 1`] = `
<div
  className="core-padded-row core-serial-port-selector"
>
  <div
    className="dropdown"
    disabled={false}
    id="serial-port-selector"
    onKeyDown={[Function]}
    open={false}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      title="Select serial port (Alt+P)"
      type="button"
    >
      Select serial port
    </button>
  </div>
  <div
    className="core-serial-port-indicator off"
  />
</div>
`;

exports[`SerialPortSelector should render two ports, one selected 1`] = `
<div
  className="core-padded-row core-serial-port-selector"
>
  <div
    className="dropdown"
    disabled={false}
    id="serial-port-selector"
    onKeyDown={[Function]}
    open={false}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      title="/dev/tty1 (Alt+P)"
      type="button"
    >
      /dev/tty1
    </button>
  </div>
  <div
    className="core-serial-port-indicator off"
  />
</div>
`;
